# ucl_open_rigs

./: .gitignore  LICENSE  README.md  TestExperiment.json  TestExperiment.yml  experiment.py  generate_classes.cmd  generate_classes.ps1  pyproject.toml  rig.py  ucl_open_rigs.sln
.config/: dotnet-tools.json
Extensions/: TestExperiment.Generated.cs
src/ucl_open/rigs/: base.py  controllers.py  data.py  data_types.py  device.py  displays.py  experiment.py  harp.py  types.py  video.py
src/ucl_open/schemas/: data_types.json
test/: Extensions.csproj  test.bonsai
test/Extensions/: TestExperiment.Generated.cs
